CHANGELOG

2015-06-18 3.6.3
    * fix: allow getting the debug log from the outside
      will be used by diag tool and possibly anyone aware of https://github.com/visionmedia/debug

2015-06-17 3.6.2
    * chore: add window.__algolia for easy debugging anywhere

2015-06-16 3.6.1
    * fix: parse cloud build fix
    * fix: YUI compressor fix
      fixes #113
    * test: automatic parse cloud build testing
    * fix: add application id to final error message ("Cannot connect to..")

2015-06-05 3.6.0
    * feat: easy commonJS require of plugins
      fixes #109
    * test: add dependency-check step in tests
    * refactor: use lodash-compat instead of less known/used/shared modules
    * chore: use uglifyjs instead of closure compiler
    * feat: allow passing hosts as hosts.read, hosts.write
    * feat: allow passing Algolia Agent as an option
    * fix: CORS simple request for all browser builds
      fixes #111

2015-06-03 3.5.0
    * fix: send a descriptive timeout error when it occurs
    * chore: add headers debugging
    * fix: incremental wait waitTask
      will now wait 100ms * loopTickNumber * loopTickNumber
      fixes #102
    * fix: do not use global when we know we will be in a browser
      browserify `global` is not always `window` can be <div id="global"></div>
      fixes #99
    * feat: new browse()/browseFrom()/browseAll()
      - `browse(query, queryParameters)` now has the same signature than
      search(). You can use any `query` and `queryParameters`.
      - `browseFrom(cursor)` can be used as an efficient way to
      continue (next page) a previous `browse()` call. All browse responses now have a `cursor` property.
      - `browseAll(query, queryParameters)` can be used to get all
      the content of your index
        It returns an [EventEmitter](https://nodejs.org/api/events.html).

        Available events:
          - `result`
          - `end`
          - `error` (you should listen to it or it will throw)
