@@ -78,6 +78,7 @@
     "eslint": "0.23.0",
     "express": "4.12.4",
     "faux-jax": "4.0.0",
+    "http-proxy": "1.11.1",
     "http-server": "0.8.0",
     "jQuery-ajaxTransport-XDomainRequest": "http://github.com/MoonScript/jQuery-ajaxTransport-XDomainRequest/tarball/1.0.4",
     "jquery": "2.1.4",
@@ -88,6 +89,7 @@
     "mversion": "1.10.0",
     "phantomjs": "1.9.17",
     "pretty-bytes": "2.0.1",
+    "proxy-agent": "1.1.0",
     "self-signed": "1.3.1",
     "server-destroy": "1.0.1",
     "sinon": "1.14.1",
